--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 *{
   margin: 0;
   padding: 0;
@@ -12,9 +13,6 @@
 }
 body{
   font-family: 'Lato', sans-serif;
-}
-a{
-  color: #617D98!important;
 }
 header{
   width: 100%;
@@ -65,7 +63,8 @@ header{
 .delete-product{
   border: none;
   cursor: pointer;
-}.cart-container{
+}
+.cart-container{
   width: 95%;
   margin: 70px;
   padding: 0 10px;
@@ -82,7 +81,7 @@ header{
   display: flex;
   align-items: center;
   background: var(--whiteColor);
-  padding: 15px 20px;
+  /* padding: 15px 20px; */
 }
 .cart-image{
   display: inline-block;
@@ -144,7 +143,6 @@ header{
   text-align: center;
 }
 .delete-product{
-  border: none;
   cursor: pointer;
 }
 /* ---------------------- */
@@ -153,13 +151,11 @@ header{
   padding: 0 0 0 20px;
 }
 .cart-details{
-  width: 75%;
   border: 1px solid #fafafa;
   border-radius: 5px;
 }
 .cart{
   display: flex;
-  /* flex-direction: column; */
   align-items: center;
   background: var(--whiteColor);
   padding: 15px 20px;
@@ -219,7 +215,7 @@ header{
   font-size: 18px;
   font-weight: bold;
   border-bottom: 1px solid #fafafa;
-}ư
+}
 .total-items{
   display: flex;
   margin: 15px 0;
@@ -230,7 +226,7 @@ header{
   font-weight: normal;
 }
 .items-count{
-  width: 20%;
+  width: 40%;
   text-align: right;
   color: black;
 }
@@ -265,6 +261,7 @@ header{
   margin-bottom: 20px;
 }
 .login__container{
+  margin-top: 120px;
   width: auto;
   display: flex;
   flex-direction: column;
@@ -346,7 +343,6 @@ header{
   top: 0;
   z-index: 999;
 }
-
 .navbar-container {
   display: flex;
   justify-content: center;
@@ -356,11 +352,9 @@ header{
 }
 
 .logo {
-  color: #fff;
   justify-self: start;
   margin-left: 20px;
   cursor: pointer;
-  text-decoration: none;
   font-size: 2rem;
   display: flex;
   align-items:flex-start;
@@ -377,11 +371,9 @@ header{
   justify-content: end;
   margin-right: 2rem;
 }
-
 .nav-item {
   height: 50px;
 }
-
 .nav-links {
   color: #fff;
   display: flex;
@@ -390,7 +382,6 @@ header{
   padding: 0.5rem 1rem;
   height: 100%;
 }
-
 .nav-links:hover {
   border: 1px solid #fff;
   transition: all 0.2s ease-out;
@@ -402,11 +393,9 @@ header{
 .fa-bars {
   color: #fff;
 }
-
-.nav-links-mobile {
+/* .nav-links-mobile {
   display: none;
-}
-
+} */
 .menu-icon {
   display: none;
 }
@@ -516,7 +505,7 @@ header{
   .cart-image{
     display: inline-block;
     width: auto;
-    height: 120px;
+    height: 220px;
   }
   .cart-container img{
     width: 100%;
@@ -534,9 +523,6 @@ header{
     width: 50px;
     height: 40px;
     line-height: 40px;
-    text-align: center;
-    font-size: 14px;
-    border-radius: 5px;
     margin: 0 2rem;
     cursor: pointer;
   }
@@ -545,27 +531,38 @@ header{
     width: 50px;
     height: 40px;
     line-height: 40px;
-    text-align: center;
-    font-size: 14px;
-    border-radius: 5px;
     margin: 0 3rem;
     cursor: pointer;
+  }
+  .total-items{
+    display: flex;
+    margin: 15px 0;
+  }
+  .items{
+    width: 40%;
+    text-align: left;
+    font-weight: normal;
   }
   .items-count{
     width: 40%;
     text-align: right;
     color: black;
   }
-  .just-title{
-    width: 40%;
-    text-align: left;
-    font-weight: normal;
-  }
   .items-price{
     width: 40%;
     text-align: right;
     font-weight: bold;
     color: black;
+  }
+  .cart-container{
+    width: 84%;
+    align-items: center;
+  }
+  header{
+    width: 100%;
+    mask-image: linear-gradient(to bottom, rgba(0,0,0,0.8), rgba(0,0,0,0));
+    height: 400px;
+    margin-bottom: -160px;
   }
 }
 
